2001-07-18  Per Bothner  <per@bothner.com>

	* Lisp2.java:  Now extends new LispInterpreter class.

	* CommonLisp.java (loadClass):  Remove debugging remnant.

2001-06-19  Per Bothner  <per@bothner.com>

	* SymbolTable.java (make):  If not registered, create.
	(readResolve):  Inline old make definition.
	* CommonLisp.java (<init>):  Use SymbolTable.make.

	* Lisp2.java (TRUE):  Is now a Binding, not the String "t".
	* CommonLisp.java (<init>):  Fix initialization of t and nil.

	* Symbol.java (isBound. getBinding):  Handle Binding as symbol.

	* Symbol.java (propertyLists):  Remove static fieldf.
	(getPropertyList, setPropertyList):  Remove static methods.

2001-06-17  Per Bothner  <per@bothner.com>

	* Lisp2.java:  New class, extends Interpreter.
	Move some shared CommonLisp/ELisp stuff here.
	Symbols are now instances of Binding, not String.
	* CommonLisp.java:  New extends Lisp2.
	Remove dependencies on gnu.jemacs (and thus Swing) code.
	Use ../lisp/PrimOps rather than gnu.jemacs.lang.*Ops.
	* Symbol.java:  Moved from gnu.jemacs.lang.
	* SymbolTable.java:  Renamed from gnu.jemacs.lang.Package.
	* Makefile.am (java_sources):  Renamed from java_JAVA and update.
	* defun.java (scanForDefinitions):  Handle symbols as Bindings.
	* defvar.java (scanForDefinitions):  Likewise.
	* setq.java (rewriteForm):  Likewise.

2001-06-03  Per Bothner  <per@bothner.com>

	* CommonLisp.java (writeFormat, displayFormat):  New fields.
	(getFormat): New method.
	(<init>):  Define procedures prin1 and princ.
	(print):  Removed method.

2001-05-16  Per Bothner  <per@bothner.com>

	* CommonLisp.java:  Update to use LangPrimType.

2001-05-01  Per Bothner  <per@bothner.com>

	Steps to making jemacs depends on commonlisp rather than vice versa.
	* UnwindProtect.java:  Moved from ../../../gnu/jemacs/lang.
	* defun.java:  Moved from ../../../gnu/jemacs/lang.
	* defvar.java:  Moved from ../../../gnu/jemacs/lang.
	* setq.java:  Moved from ../../../gnu/jemacs/lang.